@startuml

title __OVERLAYS's Class Diagram__\n

  package com.code.adventure.game {
    package com.code.adventure.game.overlays {
      class DoWhileLoop {
          + skin : Skin
          + dialogLabel : Label
          + root : Table
          + indexField : TextField
          + sizeField : TextField
          + incrementValueField : TextField
          - IndexLabel : Label
          - whileLabel : Label
          - doLabel : Label
          - incrementLabel : Label
          - rightBracket : Label
          - semiColon : Label
          - semiColon2 : Label
          - semiColon3 : Label
          - leftCurlybracket : Label
          - rightCurlybracket : Label
          - methode : Label
          ~ index : int
          ~ size : int
          ~ incrementValue : int
          - count : short
          + DoWhileLoop()
          + render()
          + dispose()
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.overlays {
      class ForLoop {
          - runButton : TextButton
          + indexField : TextField
          + sizeField : TextField
          + incrementValueField : TextField
          - label1 : Label
          - label2 : Label
          - label3 : Label
          - label4 : Label
          + skin : Skin
          - count : short
          - upButton : ImageButton
          ~ index : int
          ~ size : int
          ~ incrementValue : int
          + screenHeight : float
          - textFields : Array<Actor>
          - menuDown : boolean
          - menuButton : TextureRegion
          - dialogLabel : Label
          + dialog : Dialog
          - table : Table
          - dialogTable : Table
          + ForLoop()
          + render()
          + getTable()
          + dispose()
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.overlays {
      class GamePlayHud {
          + viewport : Viewport
          ~ font : BitmapFont
          + GamePlayHud()
          + render()
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.overlays {
      class OnscreenControls {
          {static} + TAG : String
          + viewport : Viewport
          - moveLeftCenter : Vector2
          - moveRightCenter : Vector2
          - jumpCenter : Vector2
          + OnscreenControls()
          + touchDown()
          + touchUp()
          + render()
          + recalculateButtonPositions()
      }
    }
  }
  

  package com.code.adventure.game {
    package com.code.adventure.game.overlays {
      class WhileLoop {
          + skin : Skin
          + dialogLabel : Label
          + root : Table
          + indexField : TextField
          + sizeField : TextField
          + incrementValueField : TextField
          - IndexLabel : Label
          - whileLabel : Label
          - incrementLabel : Label
          - rightBracket : Label
          - semiColon : Label
          - semiColon2 : Label
          - leftCurlybracket : Label
          - rightCurlybracket : Label
          - methode : Label
          ~ index : int
          ~ size : int
          ~ incrementValue : int
          - count : short
          + WhileLoop()
          + render()
          + dispose()
      }
    }
  }
  

  DoWhileLoop -up-|> Stage
  TouchFocus -up-|> Poolable
  ForLoop -up-|> Stage
  TouchFocus -up-|> Poolable
  OnscreenControls -up-|> InputAdapter
  OnscreenControls o-- Adventurer : adventurer
  WhileLoop -up-|> Stage
  TouchFocus -up-|> Poolable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
